# string-bean

./: Cargo.toml  LICENSE  README.md
.github/workflows/: pages-deploy.yml
src/: lib.rs
string-bean/: Cargo.toml
string-bean-cli/: Cargo.toml
string-bean-cli/src/: main.rs
string-bean-wasm/: Cargo.toml
string-bean-wasm/src/: lib.rs
string-bean/src/: core.rs  lib.rs
web/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
web/src/lib/: utils.js
web/src/routes/: +layout.svelte  +page.svelte
