[package]
name = "string-bean-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-bean = { path = "../string-bean" }
wasm-bindgen = "0.2.87"
line_drawing = "1.0.0"
